[FIX] number sections in python_strings post + fix horizontal scroll on code blocks

--- a/src/static/css/friendly.css
+++ b/src/static/css/friendly.css
@@ -5,6 +5,8 @@
   padding-right: 10px;
   font-size: 14px;
   border-radius: 3px;
+  overflow: auto;
+  line-height: 1.4;
 }
 
 .codehilite .hll { background-color: #ffffcc }
